Fix doctor service startup and configuration